# yuanta-autotrading

./: .gitignore  CMakeLists.txt  DEPLOY.md  INSTALL_WINDOWS.md  LICENSE  README.md  build.bat  build.sh  generate_vs_solution.bat  make_installer.bat  make_portable.bat
.github/workflows/: build-windows.yml
assets/: README.txt
config/: settings.ini  settings.json
docs/: TESTING_GUIDE.md
include/: MarketDataManager.h  OrderExecutor.h  RiskManager.h  Strategy.h  TechnicalIndicators.h  WebServer.h  YuantaAPI.h
installer/: YuantaAutoTrading.iss  YuantaAutoTrading.nsi  YuantaAutoTrading_CI.iss
src/: main.cpp
src/api/: YuantaAPIWrapper.cpp
src/backtest/: BacktestMain.cpp
src/core/: OrderExecutor.cpp  RiskManager.cpp
src/data/: MarketDataManager.cpp
src/indicator/: TechnicalIndicators.cpp
src/strategy/: BBSqueezeStrategy.cpp  GapPullbackStrategy.cpp  MABreakoutStrategy.cpp
src/web/: WebServer.cpp
tests/: test_indicators.cpp
